--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#FEF9E7" />
     <meta name="description" content="Portafolio de Laura Valeria Navarro, desarrolladora frontend." />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="icon" href="./logo192.png" />
+    <link rel="apple-touch-icon" href="./logo192.png" />
+    <link rel="manifest" href="./logo192.png" />
     <title>Portafolio de Laura Valeria Navarro</title>
   </head>
   <body>
